# vulnerable-store

./: .replit  app.py  config.py  main.py  make_admin.py  models.py  pyproject.toml
migrations/versions/: 1fa6bba580d3_.py  62ad32a79fd5_.py  ed881601f1ff_.py
routes/: admin.py  auth.py  shop.py
services/: code_updater.py  vulnerability_generator.py
static/css/: style.css
static/js/: admin.js  cart.js
templates/: base.html  cart.html  checkout.html  index.html  login.html  product.html  register.html
templates/admin/: dashboard.html  vulnerability_detail.html
